TODO
* update msvscpp files (libcthreads, libdokan)
* handle ZERO extents?
* extent file add windows support (encoding)
  - add codepage functions + tests
  - libvmdk_extent_descriptor.c:629
  - libvmdk_descriptor_file.c:852
* implement extent file current offset ?
* implement libvmdk_extent_file_read_grain_group_element_data
* get grain data by grain table
  - remove unused functions from libvmdk_extent_table after refactor
* implement libvmdk_handle_set_maximum_number_of_open_handles
* add support for zero-grain table entry support
* test multi segment sparse image support
* build grain table
* descriptor file: put disk data base in fvalue table ?
* vmdkinfo:
  - print dirty status
  - add byte size string support

* code clean up:
  - support and locale functions
* add glob functions
* debug output
  - descriptor file: disk database
  - extent file: flags
  - extent file: compression method

API
* add functions to access storage media data
* add functions to access extents

library
* add support for VMDK markers
* complete COWD support
* support compressed extent files

Tools:
* vmdkinfo:
  - add flag to have test to check if all the extent files are there?
  - same for all the parent extent files?

Tests:
* add open close
* add read
* add seek
* add integrity tests
* add pyvmdk

Deployment:
* check manuals
  - update libvmdk.3
  - update vmdkinfo.1
  - add vmdkmount.1

* Test images
  - vmdk flat
  - vmdk flat split
  - Monolithic sparse (done)
  - 2GB extent sparse (done)
  - cowd sparse
  - cowd sparse split
  - compressed?

20131004
* updated dependencies
* worked on libcthreads build support

20130916
* updated dependencies
* worked on libcthreads build support
* code clean up

20130831
* updated dependencies

20130608
* worked on tests

20130522
* changes for deployment

20130521
* changes for deployment

20130520
* changes for deployment

20130517
* changes for extent descriptor parsing
  - added support for extent descriptor with additional values