@@ -1,11 +1,11 @@
 <pkgref spec="1.12" uuid="33CC8723-4203-43FC-BE41-843CDA7AD3F9">
 <config>
 	<identifier>com.google.code.p.libvmdk.bin.pkg</identifier>
-	<version>20131004</version>
+	<version>20131008</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/jbmetz/Projects/libvmdk/macosx/tmp/bin</installFrom>
+	<installFrom>/home/lordyesta/Projects/libvmdk/macosx/tmp/bin</installFrom>
 	<installTo mod="true">/usr</installTo>
 	<flags>
 		<followSymbolicLinks/>
