@@ -1,11 +1,11 @@
 <pkgref spec="1.12" uuid="B3A5D8A0-F48E-4BFD-B638-B3BB98CD8E0A">
 <config>
 	<identifier>com.google.code.p.libvmdk.include.pkg</identifier>
-	<version>20131004</version>
+	<version>20131008</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/jbmetz/Projects/libvmdk/macosx/tmp/include</installFrom>
+	<installFrom>/home/lordyesta/Projects/libvmdk/macosx/tmp/include</installFrom>
 	<installTo mod="true">/usr</installTo>
 	<flags>
 		<followSymbolicLinks/>
