@@ -1,11 +1,11 @@
 <pkgref spec="1.12" uuid="CB5F6411-5CA7-404F-A840-8BBE45DD8912">
 <config>
 	<identifier>com.google.code.p.libvmdk.share.pkg</identifier>
-	<version>20131004</version>
+	<version>20131008</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/jbmetz/Projects/libvmdk/macosx/tmp/share</installFrom>
+	<installFrom>/home/lordyesta/Projects/libvmdk/macosx/tmp/share</installFrom>
 	<installTo mod="true">/usr</installTo>
 	<flags>
 		<followSymbolicLinks/>
