@@ -1,11 +1,11 @@
 <pkgref spec="1.12" uuid="9ECFB3D2-9E23-4F80-8F98-D0DD1897F1C8">
 <config>
 	<identifier>com.google.code.p.libvmdk.site-packages.pkg</identifier>
-	<version>20131004</version>
+	<version>20131008</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/jbmetz/Projects/libvmdk/macosx/tmp/</installFrom>
+	<installFrom>/home/lordyesta/Projects/libvmdk/macosx/tmp/</installFrom>
 	<installTo mod="true"></installTo>
 	<flags>
 		<followSymbolicLinks/>
