@@ -94,7 +94,7 @@ if platform.system() == "Windows":
 	library_dll_file = os.path.join(library_directory, "%s.dll" % (LIBRARY_NAME))
 
 	# Add the library DLL file to the distribution.
-	LIBRARY_DATA_FILES.append((sysconfig.get_python_lib(True), [library_dll_file])) 
+	LIBRARY_DATA_FILES.append((sysconfig.get_python_lib(True), [library_dll_file]))
 
 else:
 	DEFINE_MACROS = [
