@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # vmdkmount - temporary wrapper script for .libs/vmdkmount
-# Generated by libtool (GNU libtool) 2.4.2 Debian-2.4.2-1ubuntu1
+# Generated by libtool (GNU libtool) 2.4.2
 #
 # The vmdkmount program cannot be directly executed until all the libtool
 # libraries that it depends on are installed.
@@ -31,7 +31,7 @@ DUALCASE=1; export DUALCASE # for MKS sh
 # if CDPATH is set.
 (unset CDPATH) >/dev/null 2>&1 && unset CDPATH
 
-relink_command="(cd /home/jbmetz/Projects/libvmdk/vmdktools; { test -z \"\${LIBRARY_PATH+set}\" || unset LIBRARY_PATH || { LIBRARY_PATH=; export LIBRARY_PATH; }; }; { test -z \"\${COMPILER_PATH+set}\" || unset COMPILER_PATH || { COMPILER_PATH=; export COMPILER_PATH; }; }; { test -z \"\${GCC_EXEC_PREFIX+set}\" || unset GCC_EXEC_PREFIX || { GCC_EXEC_PREFIX=; export GCC_EXEC_PREFIX; }; }; { test -z \"\${LD_RUN_PATH+set}\" || unset LD_RUN_PATH || { LD_RUN_PATH=; export LD_RUN_PATH; }; }; { test -z \"\${LD_LIBRARY_PATH+set}\" || unset LD_LIBRARY_PATH || { LD_LIBRARY_PATH=; export LD_LIBRARY_PATH; }; }; PATH=/usr/lib/lightdm/lightdm:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin; export PATH; gcc -g -O2 -o \$progdir/\$file mount_handle.o vmdkmount.o vmdkoutput.o -pthread  -lfuse -lrt -ldl ../libcsystem/.libs/libcsystem.a ../libcpath/.libs/libcpath.a ../libcsplit/.libs/libcsplit.a ../libvmdk/.libs/libvmdk.so ../libcnotify/.libs/libcnotify.a ../libclocale/.libs/libclocale.a ../libcdata/.libs/libcdata.a ../libcerror/.libs/libcerror.a ../libcstring/.libs/libcstring.a -pthread -Wl,-rpath -Wl,/home/jbmetz/Projects/libvmdk/libvmdk/.libs)"
+relink_command="(cd /home/lordyesta/Projects/libvmdk/vmdktools; { test -z \"\${LIBRARY_PATH+set}\" || unset LIBRARY_PATH || { LIBRARY_PATH=; export LIBRARY_PATH; }; }; { test -z \"\${COMPILER_PATH+set}\" || unset COMPILER_PATH || { COMPILER_PATH=; export COMPILER_PATH; }; }; { test -z \"\${GCC_EXEC_PREFIX+set}\" || unset GCC_EXEC_PREFIX || { GCC_EXEC_PREFIX=; export GCC_EXEC_PREFIX; }; }; { test -z \"\${LD_RUN_PATH+set}\" || unset LD_RUN_PATH || { LD_RUN_PATH=; export LD_RUN_PATH; }; }; { test -z \"\${LD_LIBRARY_PATH+set}\" || unset LD_LIBRARY_PATH || { LD_LIBRARY_PATH=; export LD_LIBRARY_PATH; }; }; PATH=/usr/lib64/qt-3.3/bin:/usr/lib64/ccache:/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/home/lordyesta/.local/bin:/home/lordyesta/bin; export PATH; gcc -g -O2 -o \$progdir/\$file mount_handle.o vmdkmount.o vmdkoutput.o -pthread  -lfuse ../libcsystem/.libs/libcsystem.a ../libcpath/.libs/libcpath.a ../libcsplit/.libs/libcsplit.a ../libvmdk/.libs/libvmdk.so -lpthread ../libcnotify/.libs/libcnotify.a ../libclocale/.libs/libclocale.a ../libcdata/.libs/libcdata.a ../libcerror/.libs/libcerror.a ../libcstring/.libs/libcstring.a -pthread -Wl,-rpath -Wl,/home/lordyesta/Projects/libvmdk/libvmdk/.libs -Wl,-rpath -Wl,/usr/local/lib)"
 
 # This environment variable determines our operation mode.
 if test "$libtool_install_magic" = "%%%MAGIC variable%%%"; then
@@ -75,9 +75,9 @@ func_parse_lt_options ()
     case "$lt_opt" in
     --lt-debug) lt_option_debug=1 ;;
     --lt-dump-script)
-        lt_dump_D=`$ECHO "X$lt_script_arg0" | /bin/sed -e 's/^X//' -e 's%/[^/]*$%%'`
+        lt_dump_D=`$ECHO "X$lt_script_arg0" | /usr/bin/sed -e 's/^X//' -e 's%/[^/]*$%%'`
         test "X$lt_dump_D" = "X$lt_script_arg0" && lt_dump_D=.
-        lt_dump_F=`$ECHO "X$lt_script_arg0" | /bin/sed -e 's/^X//' -e 's%^.*/%%'`
+        lt_dump_F=`$ECHO "X$lt_script_arg0" | /usr/bin/sed -e 's/^X//' -e 's%^.*/%%'`
         cat "$lt_dump_D/$lt_dump_F"
         exit 0
       ;;
@@ -90,7 +90,7 @@ func_parse_lt_options ()
 
   # Print the debug banner immediately:
   if test -n "$lt_option_debug"; then
-    echo "vmdkmount:vmdkmount:${LINENO}: libtool wrapper (GNU libtool) 2.4.2 Debian-2.4.2-1ubuntu1" 1>&2
+    echo "vmdkmount:vmdkmount:${LINENO}: libtool wrapper (GNU libtool) 2.4.2" 1>&2
   fi
 }
 
@@ -143,13 +143,13 @@ func_exec_program ()
   func_parse_lt_options "$0" ${1+"$@"}
 
   # Find the directory that this script lives in.
-  thisdir=`$ECHO "$file" | /bin/sed 's%/[^/]*$%%'`
+  thisdir=`$ECHO "$file" | /usr/bin/sed 's%/[^/]*$%%'`
   test "x$thisdir" = "x$file" && thisdir=.
 
   # Follow symbolic links until we get to the real thisdir.
-  file=`ls -ld "$file" | /bin/sed -n 's/.*-> //p'`
+  file=`ls -ld "$file" | /usr/bin/sed -n 's/.*-> //p'`
   while test -n "$file"; do
-    destdir=`$ECHO "$file" | /bin/sed 's%/[^/]*$%%'`
+    destdir=`$ECHO "$file" | /usr/bin/sed 's%/[^/]*$%%'`
 
     # If there was a directory component, then change thisdir.
     if test "x$destdir" != "x$file"; then
@@ -159,8 +159,8 @@ func_exec_program ()
       esac
     fi
 
-    file=`$ECHO "$file" | /bin/sed 's%^.*/%%'`
-    file=`ls -ld "$thisdir/$file" | /bin/sed -n 's/.*-> //p'`
+    file=`$ECHO "$file" | /usr/bin/sed 's%^.*/%%'`
+    file=`ls -ld "$thisdir/$file" | /usr/bin/sed -n 's/.*-> //p'`
   done
 
   # Usually 'no', except on cygwin/mingw when embedded into
@@ -173,7 +173,7 @@ func_exec_program ()
     fi
     # remove .libs from thisdir
     case "$thisdir" in
-    *[\\/].libs ) thisdir=`$ECHO "$thisdir" | /bin/sed 's%[\\/][^\\/]*$%%'` ;;
+    *[\\/].libs ) thisdir=`$ECHO "$thisdir" | /usr/bin/sed 's%[\\/][^\\/]*$%%'` ;;
     .libs )   thisdir=. ;;
     esac
   fi
@@ -186,7 +186,7 @@ func_exec_program ()
   progdir="$thisdir/.libs"
 
   if test ! -f "$progdir/$program" ||
-     { file=`ls -1dt "$progdir/$program" "$progdir/../$program" 2>/dev/null | /bin/sed 1q`; \
+     { file=`ls -1dt "$progdir/$program" "$progdir/../$program" 2>/dev/null | /usr/bin/sed 1q`; \
        test "X$file" != "X$progdir/$program"; }; then
 
     file="$$-$program"
